corrected center aligned text on mobile view...

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8632,6 +8632,6 @@ input, select, textarea {
 			}
 
 /*Extras*/
-	.p-skills {
+	.p-body {
 		text-align: left;
 	}
